KWIKDEMO-5651   IPM - Android - Traps not ready screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,6 +219,7 @@
 
     <!-- Traps Activity -->
     <string name="traps_alert_title">Trap alert list</string>
+    <string name="traps_not_ready_title">Traps - Not ready</string>
     <string name="traps_filter_by">Filter By:</string>
     <string name="traps_filter_all_clients">All clients</string>
 
